--- a/wp-content/plugins/projectdoom/doom-app/assets/css/general.mixin.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/general.mixin.scss
@@ -45,3 +45,11 @@
   -o-transform: $transform;
   transform: $transform;
 }
+
+@mixin transition-delay($delay) {
+  -webkit-transition-delay: $delay;
+  -moz-transition-delay: $delay;
+  -ms-transition-delay: $delay;
+  -o-transition-delay: $delay;
+  transition-delay: $delay;
+}
