--- a/wp-content/plugins/projectdoom/doom-app/assets/css/ios.mobile.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/ios.mobile.css
@@ -27,8 +27,8 @@ body .app-dashboard {
     max-width: none;
 }
 
- div[data-ui-navigation] .nav-nav.in{
-    top:-16px !important;
+div[data-ui-navigation] .nav-nav.in{
+    /* top:-16px !important; */
 }
 
 .nav-nav {
